--- a/2/2index.html
+++ b/2/2index.html
@@ -43,8 +43,6 @@
       </ul>
     </div>
 
-
-
     <!-- javascript -->
     <script>
       const menuToggle = document.querySelector('.menuToggle');
@@ -53,6 +51,14 @@
         navigation.classList.toggle('open')
       }
 
+      const list = document.querySelectorAll('.list');
+      function activeLink(){
+        list.forEach((item) =>
+        item.classList.remove('active'));
+        this.classList.add('active');
+      }
+      list.forEach((item) =>
+      item.addEventListener('click',activeLink))
     </script>
 
 
