--- a/3/3index.html
+++ b/3/3index.html
@@ -3,24 +3,25 @@
   <head>
     <meta charset="UTF-8">
     <title>CSS Creative Icon Hover Effects</title>
-    <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/18b1cc652d.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="3style.css">
   </head>
   <body>
     <ul>
-      <li>
-        <a href="#"></a>
+      <li style="--clr:#1877f2">
+        <a href="#"><i class="fab fa-facebook-f"></i></a>
       </li>
-      <li>
-        <a href="#"></a>
+      <li style="--clr:#ff0000">
+        <a href="#"><i class="fab fa-youtube"></i></a>
       </li>
-      <li>
-        <a href="#"></a>
+      <li style="--clr:#1da1f2">
+        <a href="#"><i class="fab fa-twitter"></i></a>
       </li>
-      <li>
-        <a href="#"></a>
+      <li style="--clr:#c32aa3">
+        <a href="#"><i class="fab fa-instagram"></i></a>
       </li>
-      <li>
-        <a href="#"></a>
+      <li style="--clr:#25d366">
+        <a href="#"><i class="fab fa-whatsapp"></i></a>
       </li>
     </ul>
   </body>
